[tool.poetry]
name = "GenGPT"
version = "0.1.0"
description = "Generative GPT"
authors = ["Henry Addo <henry@addhen.org>"]
readme = "README.md"
packages = [{include = "gengpt"}]

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.40.0"
langchain = "^0.0.316"
openai = "^0.28.0"
aioboto3 = "^11.2.0"
deeplake = "^3.6.6"
numpy = "^1.25.0"
numcodecs = "^0.12.0"
tiktoken = "^0.5.0"

[tool.poetry.group.dev.dependencies]
textual = {extras = ["dev"],  version="^0.40.0"}
mypy = "^1.1.1"
pylint = "^3.0.0"
pre-commit = "^3.2.1"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gengpt = "gengpt.app.app:run"
