[tool.poetry]
name = "GenGPT"
version = "0.1.0"
description = "Generative GPT"
authors = ["Henry Addo <henry@addhen.org>"]
readme = "README.md"
packages = [{include = "gengpt"}]

[tool.poetry.dependencies]
python = "^3.11"
textual = "^1.0.0"
langchain = "^0.3.0"
openai = "^1.0.0"
aioboto3 = "^13.0.0"
deeplake = "^4.0.0"
numpy = "^1.25.0"
numcodecs = "^0.14.0"
tiktoken = "^0.8.0"

[tool.poetry.group.dev.dependencies]
textual = {extras = ["dev"],  version="^1.0.0"}
mypy = "^1.1.1"
pylint = "^3.0.0"
pre-commit = "^4.0.0"
black = "^24.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gengpt = "gengpt.app.app:run"
